# chess-cv

./: .gitignore  .mdformat.toml  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  Makefile  README.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml  sweep.yaml
.claude/commands/: update-metrics.md
README_hf/: index.html
architecture/: index.html  index.md
assets/: generate_augmentations_examples.py
data-augmentations/: index.html  index.md
data/boards/: convert_to_png.py
data/pieces/: convert_to_png.py
docs/: README_hf.md  architecture.md  data-augmentations.md  index.md  inference.md  setup.md  train-and-eval.md  usage.md
docs/assets/: generate_augmentations_examples.py
inference/: index.html  index.md
search/: search_index.json
setup/: index.html  index.md
src/chess_cv/: __init__.py  cli.py  constants.py  data.py  evaluate.py  model.py  preprocessing.py  sweep.py  test.py  train.py  upload.py  utils.py  visualize.py  wandb_utils.py
src/chess_cv/weights/: arrows.safetensors  pieces.safetensors  snap.safetensors
sweeps/: arrows.yaml
train-and-eval/: index.html  index.md
