[project]
name = "chess-cv"
version = "0.1.0"
description = "CNN-based chess piece classifier using MLX for Apple Silicon"
readme = "README.md"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "mlx>=0.24.0",
  "numpy>=2.0.0",
  "matplotlib>=3.10.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/S1M0N38/chess-cv"
Issues = "https://github.com/S1M0N38/chess-cv/issues"
Repository = "https://github.com/S1M0N38/chess-cv"
Changelog = "https://github.com/S1M0N38/chess-cv/blob/main/CHANGELOG.md"

[project.scripts]
chess-cv = "chess_cv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
publish-url = "https://upload.pypi.org/legacy/"

[tool.ruff]
lint.extend-select = ["I"]
lint.task-tags = ["FIX", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "basedpyright>=1.31.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.8",
]
